<resources>
    <string name="app_name">5sem_lab5</string>
    <string name="records_total">Records total:</string>
    <string name="found_records">Found records:</string>
    <string name="add_record">Add record</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="zero">0</string>
    <string name="name_or_surname">name or surname</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="comment">Comment</string>
</resources>