<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contextClickable="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_records_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_spacing"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:text="@string/records_total"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_records_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elements_spacing"
        android:text="@string/zero"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/text_records_total"
        app:layout_constraintStart_toEndOf="@+id/text_records_total"
        app:layout_constraintTop_toTopOf="@+id/text_records_total" />

    <TextView
        android:id="@+id/text_records_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_spacing"
        android:layout_marginTop="@dimen/horizontal_spacing"
        android:text="@string/found_records"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_records" />

    <TextView
        android:id="@+id/text_records_found_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elements_spacing"
        android:text="@string/zero"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/text_records_found"
        app:layout_constraintStart_toEndOf="@+id/text_records_found"
        app:layout_constraintTop_toTopOf="@+id/text_records_found"
        app:layout_constraintVertical_bias="0.0" />

    <SearchView
        android:id="@+id/search_records"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/horizontal_spacing"
        android:layout_marginTop="@dimen/horizontal_spacing"
        android:layout_marginEnd="@dimen/horizontal_spacing"
        android:iconifiedByDefault="false"
        android:queryHint="@string/name_or_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_records_total" />

    <Button
        android:id="@+id/button_add_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:layout_marginEnd="@dimen/horizontal_spacing"
        android:text="@string/add_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_records_found" />
</androidx.constraintlayout.widget.ConstraintLayout>